UserType selection after register
